# Triangles

./: .gitmodules  CMakeLists.txt  README.md  check_end_to_end.py
benchs/: CMakeLists.txt  benchs.cpp
include/: geometry.hpp  octotree.hpp  real_nums.hpp
src/: CMakeLists.txt  geometry.cpp  main.cpp  methods.cpp  octotree.cpp
tests/: CMakeLists.txt  unit_tests.cpp
tests/end_to_end/: 3.ans  4.ans  5.ans  6.ans
